Fix visual bug on mobile for email direction

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -7,6 +7,9 @@
 .socialIcons {
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 768px) {
+    align-items: center;
+  }
 }
 
 .contactEmail,
