--- a/components/Layouts/Wrapper.module.scss
+++ b/components/Layouts/Wrapper.module.scss
@@ -2,4 +2,9 @@
   display: flex;
   align-items: center;
   height: auto;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    text-align: center;
+  }
 }
